# paperless-archivist

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml  renovate.json
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/archivist-ai/: Cargo.toml
crates/archivist-ai/examples/: dump_metadata_prompt.rs
crates/archivist-ai/src/: lib.rs
crates/archivist-ai/tests/: quota_provider_name.rs  response_body_limits.rs  wire_contracts.rs
crates/archivist-api/: Cargo.toml
crates/archivist-api/src/: main.rs
crates/archivist-apply/: Cargo.toml
crates/archivist-apply/src/: lib.rs
crates/archivist-apply/tests/: apply_state_machine.rs  review_optimistic_concurrency.rs
crates/archivist-config/: Cargo.toml
crates/archivist-core/: Cargo.toml
crates/archivist-core/src/: lib.rs  ssrf.rs
crates/archivist-core/tests/: golden_documents.rs  language_detection.rs  metadata_extraction.rs  runtime_settings_contract.rs
crates/archivist-core/tests/fixtures/: golden_documents.json  language_samples.json  standard_metadata_samples.json
crates/archivist-db/: Cargo.toml
crates/archivist-db/src/: lib.rs
crates/archivist-db/tests/: active_run_get_or_create.rs  audit_chain_clock_skew.rs  audit_hash_v2.rs  blocked_queued_jobs.rs  claim_jobs_bulk.rs  claim_jobs_priority.rs  completion_reconciliation.rs  dashboard_live_failures.rs  dashboard_stage_status.rs  default_prompt_upgrade.rs  fail_job_retry_ceiling.rs  failed_document_ids.rs  job_failure_metrics.rs  last_enabled_admin.rs  migration_smoke.rs  ocr_pages_usage.rs  oidc_linking.rs  provider_cooldown_upsert.rs  provider_usage_fanout.rs  queue_missing.rs  release_scheduled_retries.rs  retention.rs  review_aggregate_lifecycle.rs  review_apply_conflict.rs  review_apply_fence.rs  review_item_fence.rs  run_status_mirror.rs  sync_noop_upserts.rs  text_num_ctx_floor.rs  usage_stats_redaction.rs  user_identity_namespace.rs
crates/archivist-ocr/: Cargo.toml
crates/archivist-ocr/src/: lib.rs  markup.rs
crates/archivist-paperless/: Cargo.toml
crates/archivist-paperless/src/: lib.rs
crates/archivist-paperless/tests/: download_cap.rs
crates/archivist-sqlx/: Cargo.toml
crates/archivist-sqlx/src/: lib.rs
crates/archivist-worker/: Cargo.toml
crates/archivist-worker/src/: main.rs
deploy/compose/: .env.dev-local.example  .env.example  Caddyfile  README.md  dev-local-docker-compose.yml  dev-local-init-postgres.sh  docker-compose.external-postgres.yml  docker-compose.proxy.yml  docker-compose.yml
deploy/kubernetes/: README.md  secret.example.yaml  values.example.yaml
docs/: ACCESSIBILITY.md  AI_AGENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  BRANDING.md  DEMO.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  FEATURE_REFERENCE.md  FRONTEND_DESIGN.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  LLM_PROVIDER_SETTINGS_PLAN.md  LOCAL_DEV.md  METADATA_TRACE_CONTRACT.md  MIGRATIONS.md  OPERATIONS.md  PERFORMANCE.md  POSTGRESQL_18_DESIGN.md  PROJECT_OVERVIEW.md  PROMPTS.md  PROMPT_RELEASE_NOTES.md  PROVIDER_TUNING_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RENOVATE.md  ROADMAP.md  SCREENSHOTS.md  SECURITY.md  SECURITY_DESIGN.md  SOLUTION_DESIGN.md  STABILITY.md  TESTING_ARCHITECTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md  pipeline-and-prompts.html
docs/audits/: 2026-07-17-gitlab-backlog-cleanup.md
docs/performance/: 2026-07-17-sglang-minimax-m3-capacity.md
docs/reviews/: 2026-06-06-deep-dive.md  2026-06-07-ui-redesign-audit.md  2026-06-09-full-code-audit.md  2026-06-10-prod-audit.md  2026-06-10-re-audit.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  buildInfo.ts  hardwareRecommendations.json  main.tsx  modelCatalog.test.ts  modelCatalog.ts
migrations/: 0001_init.sql  0002_complete_runtime_settings.sql  0003_default_model_providers.sql  0004_dashboard_snapshots.sql  0005_login_lockout.sql  0006_oidc.sql  0007_document_chat.sql  0008_default_prompt_pack.sql  0009_align_default_provider_models.sql  0010_workflow_modes.sql  0011_language_intelligence.sql  0012_standard_metadata.sql  0013_full_auto_safety.sql  0014_security_governance.sql  0015_paperless_deep_integration.sql  0016_notification_state.sql  0017_ga_performance_indexes.sql  0018_audit_events_job_run_indexes.sql  0019_metadata_stage.sql  0020_enabled_stages_metadata.sql  0021_metadata_prompt_seed.sql  0022_ocr_page_cache.sql  0023_document_inventory_ocr_hash.sql  0024_prompts_experiment_group.sql  0025_ai_provider_cooldowns.sql  0026_metadata_prompt_seed_refresh.sql  0027_fields_prompt_seed_refresh.sql  0028_drop_legacy_prompt_stages.sql  0029_metrics_audit_index.sql  0030_jobs_priority_generated.sql  0031_metrics_counters.sql  0032_document_inventory_ocr_body_fts.sql  0033_review_items_applying_status.sql  0034_audit_events_chain_position.sql  0035_drop_duplicate_indexes.sql  0036_search_and_prompt_indexes.sql  0037_backfill_ocr_artifact_usage.sql  0038_reconcile_current_run_status.sql  0039_drop_dead_providers_and_inventory_fossils.sql  0040_ai_artifacts_typed_token_columns.sql  (+13 more)
openapi/: openapi.yaml
openapi/fixtures/: runtime-settings-input.json  runtime-settings.json
policy/: disallowed-licenses.txt  gitleaks.toml
scripts/: dev-local-bootstrap.sh  dev-local-e2e.sh  dev-local-seed.sh  dev-local-verify.sh  seed-from-prod.py
scripts/perf/: postgres_inventory_benchmark.sql  run_postgres_inventory_benchmark.sh
scripts/verify/: accessibility_static_check.mjs  compose_proxy_contract.mjs  docs_link_check.mjs  i18n_translation_parity.mjs  i18n_translation_parity.test.mjs  kubernetes_custom_ai_egress_contract.test.mjs  kubernetes_monitoring_contract.test.mjs  migration_smoke.sh  paperless_archivist_alert_rules.test.yaml  paperless_archivist_alert_rules.yaml  router_openapi_contract.mjs  runtime_settings_openapi_contract.mjs  sglang_minimax_m3_capacity.mjs  sglang_minimax_m3_capacity.test.mjs  sglang_minimax_m3_contract.mjs  sglang_minimax_m3_contract.test.mjs
(+158 files in other folders)
