[package]
name = "archivist-ai"
version = "0.3.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-core = { path = "../archivist-core" }
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

