[package]
name = "archivist-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-core = { path = "../archivist-core" }
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
axum.workspace = true
futures.workspace = true
tokio.workspace = true
