[package]
name = "archivist-api"
version = "0.3.2"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-ai = { path = "../archivist-ai" }
archivist-config = { path = "../archivist-config" }
archivist-core = { path = "../archivist-core" }
archivist-db = { path = "../archivist-db" }
archivist-paperless = { path = "../archivist-paperless" }
argon2.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
cookie.workspace = true
futures.workspace = true
http.workspace = true
hex.workspace = true
tokio-stream = "0.1"
jsonwebtoken.workspace = true
rand.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
