[package]
name = "archivist-apply"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-core = { path = "../archivist-core" }
archivist-db = { path = "../archivist-db" }
archivist-paperless = { path = "../archivist-paperless" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
secrecy.workspace = true
sqlx.workspace = true
tokio.workspace = true
