[package]
name = "archivist-core"
version = "0.3.2"
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
uuid.workspace = true

