[package]
name = "archivist-db"
version = "0.3.2"
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
archivist-core = { path = "../archivist-core" }
base64.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
