[package]
name = "archivist-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
html5ever.workspace = true
markup5ever_rcdom.workspace = true
mime_guess.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
