[package]
name = "archivist-paperless"
version = "0.3.2"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-core = { path = "../archivist-core" }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true

