[package]
name = "archivist-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "sqlx"

[dependencies]
# SQLx Core is semver-exempt, so both packages must stay exactly in lockstep.
sqlx-core = { version = "=0.9.0", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "uuid", "json", "migrate"] }
sqlx-postgres = { version = "=0.9.0", default-features = false, features = ["chrono", "uuid", "json", "migrate"] }
