[package]
name = "archivist-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
archivist-ai = { path = "../archivist-ai" }
archivist-config = { path = "../archivist-config" }
archivist-core = { path = "../archivist-core" }
archivist-db = { path = "../archivist-db" }
archivist-ocr = { path = "../archivist-ocr" }
archivist-paperless = { path = "../archivist-paperless" }
chrono.workspace = true
futures.workspace = true
hex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
